--- a/css/contactos.css
+++ b/css/contactos.css
@@ -44,10 +44,8 @@
     color: white;
     text-decoration: none;
     /* quita el enlace del texto */
-    font-size: 1.5em;
+    font-size: 1em;
     /* Tamaño de la letra */
-    padding: 50px 50px;
-    /* el espacio entre el texto */
 }
 
 .item-main-menu {
@@ -141,7 +139,7 @@
 
     color: white;
     /* Le damos un color a la hamburguesa */
-    font-size: 2.2em;
+    font-size: 1em;
     /* Le damos tamaño a la hamburguesa */
     top: 25px;
     /* Posicion arriba */
@@ -172,7 +170,7 @@
     color: white;
     text-decoration: none;
     /* quita el enlace del texto */
-    font-size: 1.5em;
+    font-size: 1em;
     /* Tamaño de la letra */
     padding: 50px 50px;
     /* el espacio entre el texto */
@@ -263,9 +261,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.8em;
+    font-size: 1em;
     color: white;
-    padding: 0;
 }
 
 .main-menu1 {
@@ -310,9 +307,9 @@ body {
 
 label {
     /* Para la letra de los contenedores */
-    font-size: 1.2em;
+    font-size: 1em;
     /* tamaño */
-    line-height: 1.5;
+    line-height: 0.8;
     /* establecer la distancia entre líneas de texto */
     display: flex;
 text-align: left;
@@ -327,9 +324,8 @@ text-align: left;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 1.8em;
+    font-size: 1em;
     color: white;
-    padding: 0;
 }
 
 .main-menu1 {
@@ -381,28 +377,24 @@ span {
     margin: 0 14vh;
     justify-content: center;
     justify-items: center;
-    font-size: 1.3em;
+    font-size: 1em;
     display: flex;
     font-family: 'PT Sans';
 }
 
-.nombre-propietario {
-    font-size: 1em;
-}
 
-.telefono {
-    font-size: 1.3em;
-    font-weight: 700;
-    color: white;
-}
-
-.logo1,
-.logo2 {
-    padding: 50px;
-    height: 300px;
+.logo1 {
+    height: 200px;
     width: 80%;
 }
-
+.logo2{
+    height: 250px;
+    width: 80%;
+}
+.logo3{
+    height: 350px;
+    width: 80%;
+}
 .main-nav {
     text-align: center;
     background-color: #50BF3F;
@@ -424,7 +416,7 @@ span {
     text-align: center;
     text-decoration: none;
     color: white;
-    font-size: 2.5em;
+    font-size: 1.4em;
 }
 
 /* pt-sans-700italic - latin */
